<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center"
    android:background="@color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Username: Admin"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/user_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_display"
        android:textSize="18sp"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/logout_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/logout"

        android:textColor="@color/white"
        android:layout_marginTop="20dp"/>
</LinearLayout>
